@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-23T08:14:06Z",
+  "timestamp" : "2023-08-24T08:13:50Z",
   "count_outdated" : 168,
   "uniques_outdated" : 142,
-  "count" : 174,
-  "uniques" : 148,
+  "count" : 175,
+  "uniques" : 149,
   "clones" : [
     {
       "timestamp": "2023-08-11T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2023-08-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
