@@ -1,3 +1,12 @@
+2023-08-24T08:13:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5961183729 # 1112
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-24
+* notice: last 14d: unq all: 1 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 142 168 / 148 174
+* notice: next accum: outdated-unq outdated-all / unq all: 142 168 / 149 175
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-08-24]
+
 2023-08-23T08:14:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5948761463 # 1109
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-23
